# gpsmonitor

./: CMakeLists.txt  README.md  build.sh
include/: gps_read.hpp  ipaddress.hpp
source/: gps_read.cpp  ipaddress.cpp  main.cpp
